syntax = "proto3";
package mq;
option go_package = "github.com/wymli/bcsns/dependency/pb/mq;mq";


message UserChatMessage {
  string content_type = 2; // RFC 7231
  string send_msg_id = 3; // 用于服务端去重,客户端去重
  int64 send_time = 4; // 用于接收端排序,但客户端时间不可信,除非先时间同步

  int64 server_time = 5; // 服务端接收时间

  string server_msg_id = 7; // 消息唯一id

  uint64 send_uid = 10; // user id
  uint64 recv_uid = 20;  // user id

  bytes data = 30;      // payload

  optional bool is_test = 40;
}

message RoomChatMessage {
  string content_type = 2;  // RFC 7231
  string send_msg_id = 3;   // 用于服务端去重,客户端去重
  int64 send_time = 4;      // 用于接收端排序,但客户端时间不可信,除非先时间同步

  int64 server_time = 5;    // 服务端接收时间

  string server_msg_id = 7; // 消息唯一id

  uint64 send_uid = 10;     // user id
  uint64 room_id = 19;      // room id

  bytes data = 30;          // payload

  optional bool is_test = 40;
}

message Moments {
  string content_type = 2; // RFC 7231
  string moments_id = 3; // 用于服务端去重,客户端去重

  int64 server_time = 5; // 服务端接收时间

  string server_msg_id = 7; // 消息唯一id, 红点服务

  uint64 user_id = 10; // user id

  bytes data = 30;         // payload

  optional bool is_test = 40;
}

